--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,34 +1,59 @@
-<h2 style="color: orangered; text-align: center" class="col col-12">Update</h2>
-<a [routerLink]="['/']" class="btn btn-outline-info">Back</a>
-<form [formGroup]="customerForm" (ngSubmit)="updateUser()">
-  <table class="table table-light">
-    <tr>
-      <td>
-        Tên Sách:
-      </td>
-      <td>
-        <input type="text" formControlName="lastName" id="lastName">
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Tác Gỉa:
-      </td>
-      <td><input type="text" formControlName="firstName" id="firstName"></td>
-    </tr>
-    <tr>
-      <td>Mô Tả:</td>
-      <td>
-        <input type="text" formControlName="description" id="description">
-      </td>
-    </tr>
-    <tr>
-      <button type="submit" class="btn btn-danger">Update</button>
-    </tr>
-  </table>
-</form>
+<!--<h2 style="color: orangered; text-align: center" class="col col-12">Update</h2>-->
+<!--<a [routerLink]="['/']" class="btn btn-outline-info">Back</a>-->
+<!--<form [formGroup]="customerForm" (ngSubmit)="updateUser()">-->
+<!--  <table class="table table-light">-->
+<!--    <tr>-->
+<!--      <td>-->
+<!--        Tên Sách:-->
+<!--      </td>-->
+<!--      <td>-->
+<!--        <input type="text" formControlName="lastName" id="lastName">-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>-->
+<!--        Tác Gỉa:-->
+<!--      </td>-->
+<!--      <td><input type="text" formControlName="firstName" id="firstName"></td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>Mô Tả:</td>-->
+<!--      <td>-->
+<!--        <input type="text" formControlName="description" id="description">-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <button type="submit" class="btn btn-danger">Update</button>-->
+<!--    </tr>-->
+<!--  </table>-->
+<!--</form>-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+<div class="container mt-3 mb-5">
+  <h2 class="text-center">Edit book</h2>
+  <div class="ml-3 mb-3">
+    <a [routerLink]="['/']" class="btn btn-outline-info mb-3">Back</a>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <form [formGroup]="customerForm" (ngSubmit)="updateUser()">
+        <div class="form-group">
+          <label >Title</label>
+          <input formControlName="lastName" type="text" class="form-control" id="lastName" placeholder="Enter title"/>
+        </div>
+        <div class="form-group">
+          <label >Author</label>
+          <input formControlName="firstName" type="text" class="form-control" id="firstName" placeholder="Enter author"/>
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <textarea formControlName="description" class="form-control" id="description" placeholder="Enter description" rows="6"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Update</button>
+      </form>
+    </div>
+  </div>
+</div>
